# LidarView

./: .clang-format  .clang-tidy  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASES.md  version.txt  vvMainWindow.cxx  vvMainWindow.ui
Application/: CMakeLists.txt  branding.cmake  lqFilters.xml  lqSources.xml  registerDialog.ui  vvFilters.xml  vvMainWindow.cxx  vvMainWindow.h  vvMainWindow.ui  vvResources.qrc
Application/Client/: CMakeLists.txt  LidarViewMainWindow.cxx  LidarViewMainWindow.h  LidarViewMainWindow.ui  MacOSXBundleInfo.plist.in.in  lvFilters.xml  lvSources.xml
Application/Client/Resources/: lqAboutDialog.ui  lvAboutDialog.ui  lvResources.qrc
Application/CommandLineExecutables/: lvbatch.cxx
Application/Qt/ApplicationComponents/: CMakeLists.txt  lqAboutDialogReaction.cxx  lqAboutDialogReaction.h  lqChangeInterfaceReaction.cxx  lqChangeInterfaceReaction.h  lqCommandLineOptionsBehavior.cxx  lqCommandLineOptionsBehavior.h  lqInterfaceControlsToolbar.cxx  lqInterfaceControlsToolbar.h  lqLidarViewManager.cxx  lqLidarViewManager.h  lqLidarViewMenuBuilders.cxx  lqLidarViewMenuBuilders.h  lqMainControlsToolbar.cxx  lqMainControlsToolbar.h  lqMenuSaveAsReaction.cxx  lqMenuSaveAsReaction.h  lqOpenPcapReaction.cxx  lqOpenPcapReaction.h  lqOpenRecentFilesReaction.cxx  lqOpenRecentFilesReaction.h  lqOpenSensorReaction.cxx  lqOpenSensorReaction.h  lqPythonQtLidarView.h  lqStatusBar.cxx  lqStatusBar.h  lqUpdateCalibrationReaction.cxx  lqUpdateCalibrationReaction.h  lqViewFrameActionsImplementation.cxx  lqViewFrameActionsImplementation.h  lqWelcomeDialog.cxx  lqWelcomeDialog.h  vtk.module
Application/Qt/Components/: CMakeLists.txt  lqAboutDialog.cxx  lqAboutDialog.h  lqCalibrationDialog.cxx  lqCalibrationDialog.h  lqCalibrationStructs.h  lqCropReturnsDialog.cxx  lqCropReturnsDialog.h  lqSelectFramesDialog.cxx  lqSelectFramesDialog.h  vtk.module
Application/QtTesting/: CMakeLists.txt
Application/QtTesting/Scripts/: NoRPMIfNoData.xml  OpenHDL64Dual.xml  OpenHDL64Livestream.xml  RulerActionDisabledOnNonOrthogonalView.xml  ShowRPMHDL64.xml  TestQtNoRPMIfNoData.xml  TestQtOpenHDL64Dual.xml  TestQtOpenVLP16Dual.xml  TestQtOrthogonalView.xml  TestQtRulerActionDisabledOnNonOrthogonalView.xml  TestQtShowRPMHDL64.xml
Application/SoftwareInformation/: branding.cmake
Application/Ui/: CMakeLists.txt  lqLidarViewManager.cxx  lqLidarViewManager.h  lqOpenPcapReaction.cxx  lqOpenPcapReaction.h  lqOpenRecentFilesReaction.h  lqOpenSensorReaction.cxx  lqOpenSensorReaction.h  lqPythonQtCalibration.h  lqPythonQtLidarView.h  lqUpdateCalibrationReaction.cxx  lqUpdateCalibrationReaction.h  pqLidarViewManager.cxx  pqLidarViewManager.h  vvPythonQtDecorators.h
Application/Ui/Widgets/: vvCalibrationDialog.cxx  vvCalibrationDialog.h  vvCalibrationDialog.ui  vvCalibrationStructs.h  vvCropReturnsDialog.cxx  vvCropReturnsDialog.h  vvCropReturnsDialog.ui  vvLaserSelectionDialog.cxx  vvLaserSelectionDialog.h  vvSelectFramesDialog.cxx  vvSelectFramesDialog.h
Application/Ui/python/: CMakeLists.txt
Application/Wrapping/Python/: CMakeLists.txt  aboutDialog.py  applogic.py  gridAdjustmentDialog.py  planefit.py  simple.py
Examples/Plugins/RotativeLidarInterpreter/: CMakeLists.txt  README.md  RotativeLidarExampleProxies.xml
Examples/Python/: CMakeLists.txt  README.md  UsePythonAnimations.md  animation_non_temporal.py  crop_and_export_example.py  reset_window_views.py  run_slam.py  save_stream.py  split_window.py
LVCore/: .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTION.md  LICENSE  README.md
LVCore/ApplicationComponents/: CMakeLists.txt  lqCameraParallelProjectionReaction.cxx  lqCameraParallelProjectionReaction.h  lqColorToolbar.cxx  lqColorToolbar.h  lqColorToolbar.ui  lqDockableSpreadSheetReaction.cxx  lqDockableSpreadSheetReaction.h  lqEnableAdvancedArraysReaction.cxx  lqEnableAdvancedArraysReaction.h  lqHelper.cxx  lqHelper.h  lqLidarCoreManager.cxx  lqLidarCoreManager.h  lqLidarStreamColorByInitBehavior.h  lqLiveSourceScalarColoringBehavior.cxx  lqLiveSourceScalarColoringBehavior.h  lqPlayerControlsController.cxx  lqPlayerControlsController.h  lqPlayerControlsToolbar.cxx  lqPlayerControlsToolbar.h  lqPlayerControlsToolbar.ui  lqPythonQtDecorators.h  lqResources.qrc  lqRulerReaction.cxx  lqRulerReaction.h  lqSpreadSheetManager.cxx  lqSpreadSheetManager.h  lqStreamRecordDialog.cxx  lqStreamRecordDialog.h  lqStreamRecordReaction.cxx  lqStreamRecordReaction.h  lqViewFrameActions.cxx  lqViewFrameActions.h  lvSpreadSheetManager.cxx  lvSpreadSheetManager.h  vvColorToolbar.h  vvPlayerControlsController.h  vvPlayerControlsToolbar.h  vvToggleSpreadSheetReaction.h
LVCore/ApplicationComponents/ctk/: ctkCoreExport.h  (+1 more)
LVCore/CI/: .gitlab-ci-for-lidarview.yml  .gitlab-ci-linux.yml  .gitlab-ci-windows.yml  .gitlab-ci.yml  CheckoutRemote.cmake  Dockerfile  vv_lfs.cmake  vv_remote.cmake
LVCore/CMake/: CheckBuildType.cmake  CommonLidarViewOptions.cmake  FetchTestData.cmake  FinalizeLidarViewProject.cmake  FindEigen3.cmake  FindLidarViewDependencies.cmake  FindPythonQt.cmake  GenerateConfiguration.cmake.in  OutputCMakeCacheLog.cmake  PythonModuleInstaller.cmake  SetCompilationFlags.cmake  SetCompilationWarnings.cmake  SetupDoxygenDocumentation.cmake  SetupLidarviewProject.cmake  SetupOutputDirs.cmake  SetupWindowsCustomInstall.cmake  lidarview-config.cmake.in
LVCore/CommandLineExecutables/: CMakeLists.txt  lvpython.cxx  lvpython.h  lvserver.cxx
LVCore/DatasetIOPlugin/: CMakeLists.txt  plugin.cmake
LVCore/Documentation/: .gitmessage  INSTALLATION.md  LidarView_Developer_Guide.md
LVCore/LidarPlugin/: CMakeLists.txt
LVCore/LidarSlamPlugin/: CMakeLists.txt
LVCore/Python/: CMakeLists.txt
LVCore/PythonQtPlugin/: CMakeLists.txt
LVCore/Testing/: CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/DatasetIOPlugin/: CMakeLists.txt  paraview.plugin
Plugins/MotionDetectorToolbox/: CMakeLists.txt  paraview.plugin
Utilities/Doxygen/: CMakeLists.txt  doxyfile.in
doc/: BasicUsage.rst  CMakeLists.txt  Tutorial.rst  UsersGuide.rst  conf.py  index.rst
(+1469 files in other folders)
