add_subdirectory("PythonQtPlugin/")

add_subdirectory("LidarPlugin/")

add_subdirectory("ApplicationComponents/")

add_subdirectory("Python")

add_subdirectory("DatasetIOPlugin/")

add_subdirectory("LidarSlamPlugin/")

# Add subdirectory containing python script for animation
add_subdirectory("Utilities/Animation")
# Add sudbirectory containing python helper functions for pipeline scripting
add_subdirectory("Utilities/Examples")
